Made small improvements to made tha app function and for understanding if backend

--- a/src/views/categories/index.ejs
+++ b/src/views/categories/index.ejs
@@ -21,7 +21,7 @@
 
         <br>
 
-        <a href="/categories/<%= category.id %>">📦 View Items</a> |
+        <a href="/categories/<%= category.id %>">📦 View Item</a> |
         <a href="/categories/<%= category.id %>/edit">✏️ Edit</a>
 
         <form
