--- a/src/views/items/edit.ejs
+++ b/src/views/items/edit.ejs
@@ -17,7 +17,7 @@
 
     <label>
       Quantity:
-      <input type="number" name="quantity" value="<%= item.quantity %>">
+      <input type="number" name="quantity_in_stock  " value="<%= item.quantity %>">
     </label>
     <br><br>
 
