--- a/src/views/items/index.ejs
+++ b/src/views/items/index.ejs
@@ -32,7 +32,7 @@
         <tr>
           <td><%= item.name %></td>
           <td><%= item.category_name %></td>
-          <td><%= item.quantity %></td>
+          <td><%= item.quantity_in_stock %></td>
           <td>
             <% if (item.price) { %>
               GH₵ <%= item.price %>
