--- a/src/views/items/new.ejs
+++ b/src/views/items/new.ejs
@@ -16,8 +16,8 @@
     <br><br>
 
     <label>
-      Quantity:
-      <input type="number" name="quantity" required>
+      "Quantity in stock":
+      <input type="number" name="quantity_in_stock" required>
     </label>
     <br><br>
 
